--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,6 @@
+body {
+	padding-bottom: 150px;
+}
 .col-lg-9 .canvasjs,
 .col-md-9 .canvasjs,
 .col-md-8 .canvasjs,
@@ -13,4 +16,21 @@
 .col-md-4 .canvasjs,
 .col-lg-4 .canvasjs {
 	height: 300px; 
+}
+
+.IncompleteDonut_value {
+  font-size: 50px;
+  font-family: Arial;
+  font-weight: bold;
+  position:absolute;left:0px;top:0px;height:100%;width:100%;
+  color: black;
+  text-align: center;
+  line-height:400px;
+}
+.IncompleteDonut_label {
+  font-size: 25px;
+  font-family: Arial;
+  font-weight: bold;
+  text-align: center;
+  margin-top: -10px;
 }
